# pydf

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: API.en.md  API.pt-BR.md  ARCHITECTURE.md  ARCHITECTURE.pt-BR.md  CI-CD.en.md  CI-CD.pt-BR.md  CLI.en.md  CLI.pt-BR.md  ENVIRONMENT.en.md  ENVIRONMENT.pt-BR.md  README.en.md  README.pt-BR.md
examples/: README.md  basic_usage.py  custom_regex_usage.py  mysql_usage.py  recursive_usage.py
src/pydf/: __init__.py  cli.py  config.py  database.py  excel.py  legacy.py  models.py  parser.py  processor.py
tests/: test_smoke.py
